description on pin hover if no image, map touchable in searchbar area, fixed whitespace at end of page

--- a/source/scss/base/_app.scss
+++ b/source/scss/base/_app.scss
@@ -14,7 +14,6 @@ html {
 
 .Dashboard {
   height:calc(100vh - #{$header-height});
-  max-height:calc(100vh - 6em);
   display:flex;
   flex-direction: column;
 
@@ -43,7 +42,6 @@ html {
   }
 
   .ResultList {
-    overflow:auto;
     flex:3;
   }
 
