--- a/source/scss/components/_map.scss
+++ b/source/scss/components/_map.scss
@@ -13,21 +13,37 @@
 
   strong {
     font-weight:normal;
+    display: block;
   }
 
   span {
-    display: block;
+    display: inline-block;
     font-size: .8em;
   }
 
-  .PhotoContainer {
+  .PhotoContainer,
+  .TextContainer {
     height: 10em;
     min-width: 15em;
     margin: -0.5em -0.5em 0.5em -0.5em;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.7);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+  }
+
+  .TextContainer {
+    height: 10em;
+    max-width: 20em;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p, span {
+      font-size: 0.8rem;
+      color: black;
+    }
   }
 }
 
